--- a/src/config/theme.scss
+++ b/src/config/theme.scss
@@ -3,5 +3,6 @@ $subMenu: #ffffff;
 $menuSelected: #f2f2f4;
 $menuColor: rgba(0, 0, 0, 0.54);
 $menuSelectedColor: rgba(0, 0, 0, 0.871);
+$layoutBg: #fff;
 $subMenuBg: #f2f2f4;
 $hoverBg: #f2f2f4;
