--- a/src/config/global.scss
+++ b/src/config/global.scss
@@ -1,3 +1,7 @@
+.collapse-transition {
+  transition: 0.3s height ease-in-out, 0.3s padding-top ease-in-out,
+    0.3s padding-bottom ease-in-out;
+}
 body {
   &.colorWeak {
     filter: invert(80%);
@@ -321,7 +325,6 @@ body {
 
   // 内容区
   .layout-content {
-    margin: 24px 24px 0px;
     height: 100%;
     height: 64px;
     padding: 0 12px 0 0;
